SPECIFICATION/history/v047/contracts.md
# contracts.md -- livespec-console-beads-fabro

This file defines the console's wire-level and persistence contracts.

## Event Envelope

Every canonical event MUST carry:

```jsonc
{
  "event_id": "evt_...",
  "schema_version": 1,
  "context": "factory",
  "type": "factory.drain.started",
  "source": "console",
  "source_event_id": "optional-source-stable-id",
  "aggregate_id": "repo:livespec-runtime",
  "stream_id": "factory:livespec-runtime",
  "stream_seq": 12,
  "causation_id": "optional-causing-command-or-event-id",
  "correlation_id": "corr_...",
  "occurred_at": "2026-06-22T00:00:00Z",
  "observed_at": "2026-06-22T00:00:01Z",
  "payload": {},
  "metadata": {}
}
```

`event_id` is globally unique. `(source, source_event_id)` MUST be unique
when `source_event_id` is present so adapter replay is idempotent.

The `events` table (see SQLite Persistence) is a faithful 1:1 projection
of this envelope: every envelope field is a column and every column has
an envelope source. `correlation_id` and `causation_id` are scalar ids,
not structured objects; `aggregate_id` is the event's routing key (e.g.
`"repo:<id>"`, the same shape as a command's `aggregate_id`).

```mermaid
flowchart LR
  Native["Native source fact"]
  Normalize["Adapter normalize"]
  Event["Canonical event envelope"]
  Dedupe["Dedupe by source + source_event_id"]
  Append["Append to event log"]
  Project["Project read models"]

  Native --> Normalize --> Event --> Dedupe --> Append --> Project
```

## Command Envelope

Commands are persisted intentions, not facts. A command MUST carry:

```jsonc
{
  "command_id": "cmd_...",
  "context": "factory",
  "type": "factory.drain_requested",
  "aggregate_id": "repo:livespec-runtime",
  "idempotency_key": "operator-provided-or-derived-key",
  "requested_by": "user-or-agent",
  "requested_at": "2026-06-22T00:00:00Z",
  "causation_event_id": null,
  "correlation_id": "corr_...",
  "payload": {}
}
```

Commands MAY be rejected. State changes become durable only through
events such as `command.accepted`, `factory.drain.started`,
`factory.drain.failed`, `factory.drain.completed`, and
`factory.drain.not_wired` (the honest outcome a simulated or
unimplemented drain port emits instead of fabricating success, per the
honesty rule in the Command Handling section).

```mermaid
sequenceDiagram
  participant UI as TUI or future GUI
  participant API as Command API
  participant Handler as Bounded context handler
  participant Port as External-system port
  participant Store as Event store

  UI->>API: submit command
  API->>Store: persist command pending
  API->>Handler: handle command
  Handler->>Store: append command.accepted or command.rejected
  alt accepted
    Handler->>Port: invoke CLI or API
    Port-->>Handler: result
    Handler->>Store: append outcome event
    Handler->>Store: update command status
  else rejected
    Handler->>Store: update command rejected
  end
  Store-->>UI: projection/live update
```

### Operator principal resolution

The console MUST resolve the acting principal ONCE per session and MUST NOT
substitute a constant for it. Resolution proceeds in this order, and the first
match wins:

1. An explicit `--invoker <id>` argument on the console invocation.
2. Otherwise the `LIVESPEC_INVOKER` environment variable, when set and
   non-empty.
3. Otherwise a derived fallback of the form
   `unattributed:<os-user>@<hostname>`.

The resolved principal MUST populate `requested_by` on every command the
console persists, and MUST be forwarded on every orchestrator action-port
invocation the console makes, so an act performed through the console is
attributable to whoever ordered it. The fallback is a MARK, not an identity:
it records that no caller asserted who acted, and a command carrying it MUST
remain distinguishable from one carrying an asserted principal. The console's
asserted principal SHOULD take the form `console:<principal>`.

This resolution order and the recommended form are consumed from the
orchestrator plugin's ratified journal-invoker attribution contract (repo
`thewoolleyman/livespec-orchestrator-beads-fabro`, its `contracts.md` journal
invoker attribution section), which names `console:<principal>` as an example
identity. The console MUST NOT invent a second, divergent resolution order.

## SQLite Persistence

The initial durable store is SQLite in WAL mode.

Required tables:

```text
events
  global_seq integer primary key
  event_id text unique
  context text
  aggregate_id text
  stream_id text
  stream_seq integer
  type text
  schema_version integer
  occurred_at text
  observed_at text
  causation_id text null
  correlation_id text
  source text
  source_event_id text null
  payload_json text
  metadata_json text

commands
  command_id text primary key
  context text
  type text
  aggregate_id text null
  idempotency_key text unique
  requested_by text
  requested_at text
  causation_event_id text null
  correlation_id text
  status text
  payload_json text
  result_json text null
  error_json text null
  updated_at text

checkpoints
  adapter_id text primary key
  checkpoint_json text
  advanced_at text

projections
  name text
  version integer
  checkpoint_seq integer
  state_json text
```

Events are append-only. Rollback is represented by compensating events, not
by deleting or mutating prior domain events.

```mermaid
erDiagram
  COMMANDS {
    text command_id PK
    text context
    text type
    text aggregate_id
    text idempotency_key UK
    text status
    text correlation_id
    text payload_json
    text result_json
    text error_json
  }

  EVENTS {
    integer global_seq PK
    text event_id UK
    text context
    text aggregate_id
    text stream_id
    integer stream_seq
    text type
    integer schema_version
    text causation_id
    text correlation_id
    text source
    text source_event_id
    text payload_json
    text metadata_json
  }

  CHECKPOINTS {
    text adapter_id PK
    text checkpoint_json
    text advanced_at
  }

  PROJECTIONS {
    text name
    integer version
    integer checkpoint_seq
    text state_json
  }

  COMMANDS ||--o{ EVENTS : "causes"
  EVENTS ||--o{ PROJECTIONS : "replayed into"
  CHECKPOINTS ||--o{ EVENTS : "guards append"
```

## Adapter Contract

Every pull adapter MUST implement:

```text
adapter_id
source_kind
checkpoint_key
initial_backfill()
poll_since(checkpoint)
normalize(native_record) -> canonical events[]
advance_checkpoint(only after durable append)
reconcile(window)
health()
```

Adapter rules:

- The adapter MUST persist a durable checkpoint per source instance.
- The adapter MUST append normalized events before advancing its checkpoint.
- The adapter MUST provide at-least-once delivery; duplicates are allowed
  and MUST be deduplicated by stable source event identity.
- The adapter MUST support cold-start backfill and bounded backfill.
- The adapter MUST re-read a sliding reconciliation window on normal polls.
- The adapter MUST emit explicit ingestion health events for parse failures,
  unavailable sources, invalid checkpoints, backfill incompleteness, or
  unprovable continuity.
- If a source cannot provide complete historical transitions, the adapter
  MUST emit snapshot/reconciliation events and a completeness finding rather
  than claiming full history.
- If an adapter does not actually perform real source I/O (a minimal or
  simulated first-milestone adapter per `spec.md` -> Initial-adapter
  fidelity), it MUST emit an explicit not-observed / simulated /
  unimplemented health signal and MUST NOT emit an event asserting an
  observed source fact it did not observe.

The adapter honesty rule tightens to separate a reachable-but-empty
source from a genuinely unreachable one:

- A SUCCESSFUL observation of an EMPTY source is NOT an unavailability.
  When the adapter reaches its source and the source simply holds
  nothing to report -- an empty work-item ledger, zero open pull
  requests, or an absent-but-expected dispatch journal -- the adapter
  MUST treat it as observed-and-idle and MUST NOT emit a not-observed
  finding for it. A not-observed finding is reserved for GENUINE
  unreachability: an unresolvable program, a non-zero command exit, an
  unreadable or absent required file, or an uninterpretable ENVELOPE, or
  the preceding bullet's simulated / unimplemented (no real source I/O)
  case. An envelope the adapter CAN read is OBSERVED even when some of its
  items are unparseable: a malformed item MUST NOT be promoted into an
  uninterpretable payload for the whole source, and an adapter that skips
  one MUST still report the source as observed. This is the
  cockpit-blind-vs-idle distinction (`scenarios.md`
  Scenario 13): an idle factory MUST NEVER be counted or named as an
  unavailable source.
- A not-observed finding MUST carry a human-readable reason, and that
  reason MUST be durably persisted with the finding so the operator can
  see WHY a source is unavailable, not merely THAT it is.
- The header's source-availability tally MUST reflect the LATEST poll
  outcome per source: a source counts as unavailable only while its
  MOST RECENT poll was not-observed. A source that is observed on a
  later cycle MUST clear from the tally, so a transient failure is never
  a permanent brand.

```mermaid
stateDiagram-v2
  [*] --> LoadCheckpoint
  LoadCheckpoint --> PollWindow
  PollWindow --> Normalize
  Normalize --> AppendEvents
  AppendEvents --> AdvanceCheckpoint
  AdvanceCheckpoint --> HealthOk
  HealthOk --> PollWindow

  PollWindow --> SourceUnavailable
  Normalize --> ParseFailed
  AppendEvents --> AppendFailed
  SourceUnavailable --> EmitHealthFinding
  ParseFailed --> EmitHealthFinding
  AppendFailed --> RetryWithoutAdvance
  EmitHealthFinding --> PollWindow
  RetryWithoutAdvance --> PollWindow
```

```mermaid
sequenceDiagram
  participant Adapter
  participant Source
  participant Store
  participant Checkpoint

  Adapter->>Checkpoint: read checkpoint
  Adapter->>Source: poll from checkpoint minus safety window
  Source-->>Adapter: native records
  Adapter->>Adapter: normalize to canonical events
  Adapter->>Store: append events idempotently
  Store-->>Adapter: durable append confirmed
  Adapter->>Checkpoint: advance checkpoint
```

## Initial Adapters

Initial adapters:

- **Fabro adapter** -- reads Fabro API/SSE or `fabro ps` / run details and
  emits run, blocked, terminal (including the `needs_human` terminal), and
  run-link events. It MUST read each observed run's status kind and MUST
  NOT synthesize a human-gate state for any run.
- **Dispatcher adapter** -- tails and backfills Dispatcher journal JSONL and
  emits dispatch wave/item/outcome events.
- **Work-items adapter** -- reads work-item state through the orchestrator
  CLI (`list-work-items --json`, one batch read carrying every item with its
  orchestrator-computed `lane` / `lane_reason`) and emits work-item snapshot
  events that carry the emitted lane assignment verbatim. The console holds
  zero Beads knowledge: this adapter MUST NOT invoke `bd` or parse
  Beads-native records, and MUST NOT re-derive a lane from `status` or any
  other field -- lane re-derivation is the shadow-state failure the
  lifecycle design killed (design record: repo `thewoolleyman/livespec`,
  `plan/archive/work-item-state-machine/research/03-decision-log.md`,
  decisions 15/16).
- **LiveSpec adapter** -- reads spec-side `next`, doctor output,
  proposed changes, history, and filesystem/git state.
- **GitHub adapter** -- reads PR, check, branch, and merge state.
- **needs-attention adapter** -- reads the product `needs-attention` snapshot
  through the orchestrator CLI (`needs-attention --json`, one point-in-time
  read of the flat `attention[]` array; each item carries its stable `id`,
  `kind`, `urgency`, `summary`, `source_ref`, and `handoff`) and DIFFS that
  snapshot against the last ingested one at ingest, emitting
  `attention_item.appeared` (an `id` not previously present),
  `attention_item.changed` (a present `id` whose composed content changed),
  and `attention_item.resolved` (a previously-present `id` now absent), each
  keyed by the stable `id`. The diff is idempotent: an unchanged `id` emits
  nothing. The `needs-attention` surface is stateless / point-in-time (no
  timestamps, no events, no history) and re-derives none of the primitives it
  composes (impl-side ready work, the human valves, spec-side actions, open
  `plan/<topic>` threads, repository hygiene); the console consumes the
  composed snapshot verbatim, and this diff-at-ingest is what turns the
  point-in-time snapshots into a durable event stream -- ALL event-sourcing
  lives in the console. This mirrors the Work-items adapter's
  snapshot-without-transition-history pattern (`scenarios.md` Scenario 4 and
  the new Scenario 12; design record: repo `thewoolleyman/livespec`,
  `plan/archive/needs-attention/research/design.md` §"Statelessness and the console
  event-sourcing boundary"). The `needs-attention` CLI surface is owned by the
  orchestrator plugin, not the console; the console MUST NOT reach around this
  port to recompute the inbox. The adapter's `attention_item.*` emissions are the
  ONLY events this source produces: the console MUST NOT synthesize work-item
  lane state -- `work_item.*` events, lane membership, rank, status, or
  admission/acceptance policy values -- from attention items. A work-item
  referenced by an attention row MUST be rendered from genuinely-ingested
  work-item snapshots, and one the console never ingested MUST render as
  explicitly absent rather than be fabricated.

  **Per-item tolerance and the skipped-item surface.** The field guarantees
  above hold PER ITEM. The adapter MUST parse the `attention[]` array per
  item: it MUST ingest every well-formed item, and it MUST skip an item it
  cannot parse -- malformed fields, or a missing or empty stable `id` --
  while consuming the rest of the envelope. A parse that discards the WHOLE
  envelope because one item is bad is non-conforming; one malformed item
  MUST NOT blind the inbox, the detection-staleness backstop included. The
  adapter MUST surface what it skipped, carrying a human-readable reason per
  skipped item, so a silently-shrunken inbox is impossible. An unknown `kind`
  is a WELL-FORMED item and MUST NOT be skipped as malformed -- `kind` is an
  open string set on the wire, and the console MUST surface an unknown-kind
  item rather than drop it. A not-observed finding for this source is
  reserved for an envelope that is genuinely unreadable -- output that is not
  a JSON object carrying an `attention` array at all -- never for the items
  inside a readable one. This posture is the producer-declared contract this
  console pins from the orchestrator plugin (repo
  `thewoolleyman/livespec-orchestrator-beads-fabro`, its `contracts.md`
  per-item field-stability and consumer-tolerance posture), which the console
  MUST NOT re-derive or relax.

Adapters MUST call existing stable CLIs/APIs through ports. UI code MUST NOT
call Fabro, Beads, LiveSpec, Dispatcher, or GitHub directly. Work-item state
enters the console ONLY through the orchestrator-CLI port: no console code --
adapter, application, or UI -- invokes `bd` or reads the Beads tenant directly.
When a console run needs orchestrator-owned backing CLIs, it MUST resolve and
validate the orchestrator plugin entry points before invoking them: explicit
per-program overrides win, then an explicit plugin-root override, then the
selected repo checkout's `.claude-plugin/scripts/bin/`, then the installed
Claude plugin cache; a malformed selected plugin root fails loudly, while an
absent plugin degrades through named not-observed findings rather than
fabricating source state.

```mermaid
flowchart TB
  subgraph SourceContracts["Source contracts"]
    Fabro["Fabro API / run events"]
    Dispatcher["Dispatcher journal JSONL"]
    WorkItems["orchestrator list-work-items --json"]
    LiveSpec["/livespec next / doctor / files"]
    GitHub["PR / check / merge API"]
    NeedsAttention["orchestrator needs-attention --json"]
  end

  subgraph AdapterContracts["Adapter contracts"]
    FA["Fabro adapter"]
    DA["Dispatcher adapter"]
    WIA["Work-items adapter"]
    LA["LiveSpec adapter"]
    GA["GitHub adapter"]
    NAA["needs-attention adapter"]
  end

  subgraph Canonical["Canonical console stream"]
    RunEvents["fabro.* events"]
    DispatchEvents["dispatch.* events"]
    WorkEvents["work_item.* events"]
    SpecEvents["spec.* events"]
    PrEvents["pr.* events"]
    AttnEvents["attention_item.* events"]
  end

  Fabro --> FA --> RunEvents
  Dispatcher --> DA --> DispatchEvents
  WorkItems --> WIA --> WorkEvents
  LiveSpec --> LA --> SpecEvents
  GitHub --> GA --> PrEvents
  NeedsAttention --> NAA --> AttnEvents
```

## Command Handling

Command handlers live in bounded contexts. A handler MUST:

1. Validate the command against context policy and aggregate/projection state.
2. Persist acceptance or rejection.
3. Invoke external systems only through ports/adapters.
4. Append success/failure/outcome events.
5. Leave recovery to reconciliation/backfill when a crash occurs between an
   external side effect and outcome event append.
6. Never emit a success or outcome event for an effect the port did not
   actually achieve. A simulated or unimplemented port MUST surface a
   not-observed / simulated / unimplemented outcome (or a typed failure),
   never a fabricated success.

Initial commands:

- `factory.drain_requested`
- `factory.dispatch_item_requested`
- `factory.pause_requested`
- `factory.resume_requested`
- `spec.doctor_requested`
- `work_item.approve_requested`
- `work_item.accept_requested`
- `work_item.reject_requested`
- `work_item.set_admission_requested`
- `work_item.set_acceptance_requested`
- `work_item.resolve_blocked_requested`
- `work_item.move_requested`
- `work_item.set_dispatcher_override_requested`
- `config.dispatcher_setting_set`

Eight `work_item.*` commands form the Work-item Lifecycle context's vocabulary.
SEVEN of them -- the human-valve, policy-edit, and status-move commands -- each
map 1:1 onto the orchestrator's published `drive` action-id surface, and the
console MUST issue those seven ONLY through that surface -- it never writes the
ledger directly: `work_item.approve_requested` ->
`approve:<work-item-id>`; `work_item.accept_requested` ->
`accept:<work-item-id>`; `work_item.reject_requested` (payload `mode` in
{rework, regroom}) -> `reject:<work-item-id>:rework|regroom`;
`work_item.set_admission_requested` (payload `policy` in {auto, manual}) ->
`set-admission:<work-item-id>:<policy>`; `work_item.set_acceptance_requested`
(payload `policy` in {ai-only, human-only, ai-then-human}) ->
`set-acceptance:<work-item-id>:<policy>`; `work_item.resolve_blocked_requested`
(payload `target_status` in {ready, backlog}) ->
`resolve-blocked:<work-item-id>:ready|backlog`; `work_item.move_requested`
(payload `target_status` in {backlog, ready, blocked}) ->
`move:<work-item-id>:<target-status>`. Approve is the human approval act --
the `pending-approval -> ready` transition -- and a policy edit never moves an
item between states (the no-surprise-transitions rule); these semantics and the
two policy-edit action ids are the orchestrator's ratified contract (repo
`thewoolleyman/livespec-orchestrator-beads-fabro`, `SPECIFICATION/contracts.md`,
its Work-item state semantics section and its `drive` action-id surface).
`resolve-blocked` is the operator resolution of a `blocked` work-item to
`ready` or `backlog`; the orchestrator source-guards it to a `blocked` item
awaiting a human. `move` is the guarded relocation among the
pre-terminal pipeline statuses, narrowed to the per-state operator verb
vocabulary (repo `thewoolleyman/livespec-orchestrator-beads-fabro`,
`SPECIFICATION/contracts.md`, its Per-state operator verb vocabulary
section), which the console consumes as data: the move-status picker MUST
offer, per source lane, exactly `backlog` -> {`ready`, `blocked`};
`pending-approval` -> {`backlog`, `blocked`}; `ready` -> {`backlog`,
`blocked`}; `acceptance` -> {`backlog`, `blocked`}; and nothing for
`active` or `done` (a `blocked` item routes through `resolve-blocked`
above). The picker MUST NOT offer `active` as a target from any lane
(`active` is entered only by a journaled dispatch or a rework return from
`acceptance` per that vocabulary), MUST NOT offer `ready` on a
`pending-approval` item (admission routes through the approve valve
ONLY), and MUST NOT offer `done` from any lane — `done` stays reachable
ONLY via `accept` from `acceptance`, so the ship-guard is now true of the
picker as well as the orchestrator's target-guard (which refuses `done`,
`acceptance`, and `pending-approval`). The EIGHTH command,
`work_item.set_dispatcher_override_requested`, does NOT map 1:1 -- it fans out
to the orchestrator's per-setting override actions (Dispatcher Policy
Settings below) -- and the console MUST issue it ONLY through that surface,
never writing the ledger label directly.
The honesty rule of this section applies unchanged: a simulated or unimplemented
orchestrator port MUST surface a not-observed / not_wired outcome and MUST NOT
fabricate success. Snooze/acknowledge remain killed (design record decision
16): there is no local-dismiss command; "not now" is defer/re-rank via the
orchestrator.

The persisted command queue is a SINGLE-CONSUMER queue: every pending command
MUST be executed by exactly one console client -- that command's CONSUMER -- no
matter how many clients open the same store. Before running a command's handler,
the consumer MUST atomically claim the command by transitioning its status
`pending` -> `executing`; a client whose claim takes no effect -- another
consumer already owns the row -- MUST NOT execute that command. On completion
the owning consumer MUST finalize the claimed command from `executing` to a
terminal status (`completed`, `failed`, `rejected`, or `not_wired` -- the
honesty rule's not-wired terminal outcome remains a legal finalization of a
claimed command). A command stranded at `executing` by a consumer that crashed
before finalizing MUST NOT stay stranded forever: once the claim is
recognizably stale, the command MUST be re-offered for consumption or driven to
a terminal status by reconciliation. Staleness recognition MUST be
conservative -- a claim MUST NOT be treated as stale while its owning consumer
is still executing the command, so recovery never steals a live claim and
re-introduces the double-execution this section forbids.

```mermaid
flowchart LR
  Requested["command requested"]
  Claim["atomic claim: pending -> executing"]
  Lost["another consumer owns it -- do nothing"]
  Stale["stale executing claim (crashed consumer)"]
  Policy["context policy validation"]
  Rejected["command rejected event"]
  Accepted["command accepted event"]
  SideEffect["invoke port"]
  Succeeded["success event"]
  Failed["failure event"]
  Reconcile["reconciliation observes external result"]

  Requested --> Claim
  Claim -->|"won"| Policy
  Claim -->|"lost"| Lost
  Claim -.->|"crash before finalize"| Stale
  Stale -.->|"recovery"| Requested
  Policy -->|"invalid"| Rejected
  Policy -->|"valid"| Accepted
  Accepted --> SideEffect
  SideEffect -->|"ok"| Succeeded
  SideEffect -->|"expected failure"| Failed
  SideEffect -->|"crash gap"| Reconcile --> Succeeded
```

## Dispatcher Policy Settings

The console holds NO dispatcher-setting state of its own (see `spec.md` ->
Dispatcher Policy Settings). The single persistent record of each setting is
the orchestrator's own: the `dispatcher.*` keys in the repo's
`.livespec.jsonc` for the global defaults, and the per-item ledger labels
for the overrides (repo `thewoolleyman/livespec-orchestrator-beads-fabro`,
`SPECIFICATION/contracts.md`, its Dispatcher policy settings section). The
console's Configuration context MUST derive each effective value by reading
the orchestrator's published read surface, and MUST NOT persist a second,
console-owned copy of any setting; an unreadable surface MUST degrade to a
named not-observed finding rather than an assumed value.

The console commands and observes exactly those `dispatcher.*` settings the
orchestrator publishes as API-configurable. That set GROWS as the orchestrator
ratifies further keys; at the time of writing it included
`auto_approve_ready`, `merge_on_review_cap`, `acceptance_mode`,
`review_fix_cap`, `acceptance_rework_cap`, and `wip_cap`. That enumeration is
illustrative and MUST NOT be read as normative or exhaustive: the console MUST
NOT hardcode it, and MUST read the orchestrator's published declaration of its
API-configurable keys, so a key the orchestrator adds needs no console spec
change to appear. Conversely, a `dispatcher.*` key the orchestrator declares
NOT API-configurable MUST NOT appear as an editable row on the console
Settings surface or any remote API the console exposes, even when the console
can otherwise read its effective value; such a key MAY be displayed only as
read-only context.

Settings are changed only through commands and recorded only through events:

- `config.dispatcher_setting_set` (context `configuration`) carries
  `{ "repo": "<repo-id>", "setting": "<dispatcher-key>", "value": <json> }`
  and sets ONE global default. It is a per-setting write: a single command
  MUST NOT change more than one setting, and the console MUST NOT offer an
  arming command that flips several settings at once. On acceptance the
  handler MUST effect the change through the orchestrator's published command
  surface and MUST append the audit event below, rather than writing the
  orchestrator's `.livespec.jsonc` itself.
- `work_item.set_dispatcher_override_requested` (context `work_item`) carries
  `{ "work_item_id": "<id>", "setting": "<dispatcher-key>", "value": <json> }`
  and sets, or with a null `value` clears, ONE per-item override. The handler
  MUST reject the command when `setting` is `wip_cap`, a per-repo concurrency
  ceiling that admits no per-item override. It MUST also reject
  `auto_approve_ready` and `acceptance_mode`, whose per-item overrides are the
  established `work_item.set_admission_requested` and
  `work_item.set_acceptance_requested` commands above, so that each
  overridable setting has exactly one console command; this command therefore
  serves every other overridable key -- at the time of writing
  `merge_on_review_cap`, `review_fix_cap`, and `acceptance_rework_cap`.
  It maps onto the orchestrator's published per-setting override action for
  that key, and the console MUST NOT write the ledger label directly.
- `config.dispatcher_setting.changed` and
  `work_item.dispatcher_override.changed` (contexts `configuration` and
  `work_item`) are the durable audit facts, each carrying the target repo or
  work-item id, the setting, its previous and new values, the requesting
  actor, and `occurred_at`.

Enabling a dangerous setting is an ordinary recorded settings write. It MUST
be recorded through the same command-plus-outcome-event path as any other
operator command, and its handler MUST NOT require a type-the-repo-name
acknowledgement or any other arming ceremony as a precondition of the write.

Both commands obey the honesty rule in Command Handling: a simulated or
unimplemented orchestrator port MUST surface a not-wired / not-observed
outcome (for example `config.dispatcher_setting.not_wired`) and MUST NOT
fabricate success.

The orchestrator journals every auto-disposition a setting enables and
escalates every decision no setting may auto-dispose. The console MUST read
both from the orchestrator's published journal read surface and MUST surface
each escalation as a needs-attention item; it MUST NOT re-derive an
escalation from any other source.

### Factory-drain launcher argv

Dispatch-time policy is NOT armed per run. The Dispatcher reads the
orchestrator-owned `dispatcher.*` settings for itself, so there is no per-run
policy flag to pass and its argument parser recognizes none. The console's
factory-drain path MUST therefore invoke the Dispatcher with NO policy-arming
argument; passing one would send an unrecognized argument and the run would
fail. This is a distinct obligation from the settings writes above: a per-run
flag writes no setting, so no settings clause constrains it.

### Per-item factory-dispatch launcher argv

A per-item dispatch is a hand-picked, single-item run rather than a ranked
drain, so the drain clause above does not constrain it and a separate launcher
obligation is required. The console's `factory.dispatch_item_requested` path
MUST invoke the Dispatcher's GOVERNED `loop` surface, bounded to one item:

    loop --repo <repository-path> --budget 1 --parallel 1 --item <work-item-id>

The console MUST bind to that surface and MUST NOT bind to the Dispatcher's
`dispatch` subcommand, even though `dispatch` also accepts a single required
item. The orchestrator's own specification governs the `loop` grammar including
its repeatable `--item` flag, and its own per-item
`drive impl:<work-item-id>` action takes this same bounded-loop path, with the
selection-bounding flags `--budget 1 --parallel 1 --item <work-item-id>` (it
additionally passes the optional output flag `--json`, which affects neither
selection nor eligibility; the console's argv is conformant with or without it).
See that repository's `SPECIFICATION/contracts.md`, sections "Dispatcher loop
invocation surface" and "The skill surface".

By contrast the orchestrator publishes NO governed grammar for `dispatch`, which
is therefore implementation surface that MAY change without the orchestrator
violating any contract. Binding the console to an ungoverned sibling surface
would let this contract rot silently. The console consumes a sibling's PUBLISHED
surface rather than re-deriving or pinning its internals, exactly as it consumes
the orchestrator-owned lane vocabulary.

**A per-item dispatch NARROWS the ranked selection; it MUST NOT bypass it.**
The orchestrator's governed surface (its `SPECIFICATION/contracts.md`
§"Dispatcher loop invocation surface") is explicit that a named item which is
not dispatch-eligible MUST NOT be dispatched, exactly as if it had not been
named.
The console therefore MUST NOT present per-item dispatch as an override that
forces an ineligible item to run, and MUST surface the resulting no-dispatch
outcome truthfully rather than reporting a dispatch that did not occur. The
per-repo WIP cap remains the authority on how many items may be active at once,
and a per-item dispatch is subject to it exactly as a drain is.

**Passing `--item` is load-bearing beyond selection.** The orchestrator's
contract makes the presence of `--item` its marker that a human hand-picked the
dispatch, and keys a fail-closed cost gate on it (its
`SPECIFICATION/contracts.md` §"Fail-closed cost gate (keyed on `--item`
presence)"). The console MUST therefore
express per-item dispatch by passing `--item`, and MUST NOT emulate it by any
other means -- a construction that selected one item without `--item` would
route around that gate while appearing equivalent.

The no-policy-arming obligation carries across unchanged: the Dispatcher reads
the orchestrator-owned `dispatcher.*` settings for itself, so the console MUST
pass NO per-run policy-arming argument on a per-item invocation either.

Once this argv is specified, an implementation whose per-item port reports a
not-wired outcome UNCONDITIONALLY MUST NOT be treated as conforming to it; the
port MUST invoke the argv named above. This does NOT weaken the honest-outcome
rule: a per-item dispatch whose invocation genuinely cannot run MUST still
report a not-observed, unimplemented, or typed-failure outcome rather than a
fabricated success. What is forbidden is the unconditional refusal standing in
for an implementation. Correspondingly, the console MUST NOT present a per-item
dispatch verb as available when it cannot perform it; it MUST either invoke the
specified argv or mark the verb unavailable.

**The per-item dispatch verb MUST carry a single-key accelerator** in addition to its menu path. The key MUST be rendered in the Status-line hints wherever the verb is available and MUST be inert, and its hint absent, wherever the verb is unavailable, per the honesty rule of the Status-line hints clause. The verb the factory exists for MUST NOT be the one per-item verb an operator can reach only through the menu bar or the command palette. The specific key is an implementation detail; the obligation is that a selected `ready` work-item, on either per-item surface (the needs-attention row or the drilled-in lane selection), is dispatched by one keystroke plus the same confirmation dialog the menu path opens. This does not weaken Scenario 27: the menu path remains and the key is the additional accelerator that scenario permits. The obligation was earned on 2026-08-31, when dispatching one hand-picked item from the console required opening the menu bar, walking to Factory, then Dispatch, then choosing the per-item entry, while approve, accept and reject each had a key.

### Settings-surface completeness

Every key the orchestrator declares as API-configurable MUST appear, in
lockstep, in three places: a row under the console's Settings surface, the
TUI's inline / context help for that row, and the console's settings doc
(`docs/detailed-usage.md`, per the User Documentation Contract section). A
mechanical completeness check MUST fail when a declared key is missing from
the Settings surface or from the settings doc.

That check lives HERE, on the consumer side: it reads the orchestrator's
declared API-configurable-key surface and compares it against the console's
own Settings rows and settings doc. Per the No-Circular-Dependency Directive
the orchestrator MUST NOT read into the console, so this check MUST NOT be
placed upstream -- a foundational plane never reads into its consumer.

## Needs-human as a ledger valve

The orchestrator's implement workflow carries no in-loop human gate (the
orchestrator's `SPECIFICATION/contracts.md`
§"A factory run never awaits a human", Scenarios 103-106): a needs-human
outcome terminates the run at a `needs_human` node, preserves the run's tree
on `refs/heads/needs-human/<run id>`, and rests the work-item at
`blocked / needs-human`. The console MUST render such an item with the valves
the orchestrator's attention projection advertises for it -- the
`resolve-blocked:<id>:ready` valve and the rework route -- sourced from
`needs-attention --json` / `list-work-items --json`, never derived locally.
The console MUST NOT render, copy, or execute an attach handoff to a factory
run for a needs-human item; there is no run to attach to. The console MUST
read a dispatched item's run id and factory from the item's
`dispatch_fabro_run_id` and `dispatch_factory` metadata, not by scanning
console events. The console MUST render an orphaned-factory-runs lane fed by
the orchestrator's `reconcile-runs --dry-run --json` projection, carrying run
id, factory, status kind, work-item id, work-item status, orphan reason, and
termination route (the orchestrator's name for the remedy it prescribes), and
MUST NOT infer orphan or gate state from an observation alone. The console's
bundled workflow fork MUST conform to the same contract -- it MUST NOT carry
an in-loop `escalate` human gate -- so that a console adopter's runs terminate
the way the orchestrator's do.

## User Documentation Contract

The console's user-facing documentation MUST live under a `docs/` tree at the repository root: the repository's top-level `README.md` MUST NOT carry user-facing documentation of its own beyond a project overview and a pointer into that tree, and `docs/README.md` MUST be an overview plus a table of contents whose entries link the substantive sub-documents by relative path.

The `docs/` tree MUST carry four sub-documents: `docs/installing.md` covering installation, including the download-install path and running the console against a repository other than its own; `docs/overview-quickstart.md` covering a general overview and quick start; `docs/cli-options.md` covering the console's environment variables, CLI options, and sub-commands; and `docs/detailed-usage.md` covering detailed usage with a section per TUI pane; the tree MAY carry further sub-documents, and what additional headings each one carries is an implementation detail.

The console's settings doc -- the documentation surface the Settings-surface completeness check reads -- MUST be `docs/detailed-usage.md` and MUST NOT be the top-level `README.md`; this supersedes the earlier settings-doc-is-the-README anchor, which held only while the console had no `docs/` tree.

Contributor-facing material (build, development, and gate documentation) is NOT user-facing documentation and is unconstrained by this contract: it MAY remain in the top-level `README.md`.

## TUI Contract

The TUI is the first frontend. It MUST be a projection consumer and command
producer, not a source-system client.

Required TUI views:

- needs-attention
- Spec
- Lanes
- Events
- Repos
- Settings

The `Lanes` view is the work-item consumer: it renders the seven lifecycle
lanes (`backlog`, `pending-approval`, `ready`, `active`, `acceptance`,
`blocked`, `done`) projected from the orchestrator's emitted `lane` /
`lane_reason` — the console consumes that lane assignment and never re-derives
it (the lane vocabulary is owned by `livespec-orchestrator-beads-fabro`, referenced here, not
re-decided). It is a hybrid sub-view: a lane-overview home listing all seven
lanes with their counts and a preview of each lane's top rank-ordered items,
with drill-in to a single lane's full rank-ordered list and, from there, a
second drill-in to the selected work-item's full standardized record. The `Lanes` view
subsumes the earlier ad-hoc `Ready` / `Factory` / `Manual` / `Done` groupings,
which the lane model makes redundant. `Spec`, `Events`, and `Repos` remain as
orthogonal, non-lane views.

The default view MUST be needs-attention. Navigation SHOULD use arrow-driven
selection lists, detail panes, command modals, `/` search, and a command
palette. Numeric selection MAY exist as a fallback but MUST NOT be the only
interaction model.

The TUI MUST present its in-app help as a navigable, context-specific
modal overlay invoked by `?`. The overlay MUST be a window drawn ON TOP
of the main screen occupying nearly the full viewport, with only a
3-character border on each side and on top and bottom, and it MUST never
render wider than the viewport. It MUST lay out as a LEFT-side menu of
help sections beside a RIGHT-side help-text pane whose text scrolls UP
and DOWN only, never left or right. The menu MUST carry one `Global
actions` section plus one section PER focusable pane, and pressing `?`
while a pane is focused MUST open the overlay auto-focused to THAT pane's
section. While open the overlay is modal: it holds input focus, the
underlying view neither switches nor scrolls, and it MUST close ONLY on
`Esc` — no other key, command, valve, or view-switch dismisses it — with
the text `esc to exit` printed at the bottom of the overlay at all
times. This modal help is the console's primary help surface across all
views; it is in addition to, and does not remove, the per-row inline
help the `Settings` view carries.

The `Settings` view is the dispatcher-settings surface. It MUST offer a
`Dispatcher settings` sub-menu rendering one row per orchestrator-declared
setting -- Auto-approve ready, Merge on review cap, Acceptance mode, Review
fix cap, Acceptance rework cap, and WIP cap -- each row showing the effective
value the console observed and carrying context-specific inline help. A row
whose non-default value lets the factory act without a human MUST render a
"dangerous / use with caution" label. Editing a row MUST submit a
`config.dispatcher_setting_set` command for that one setting, and MUST NOT
require a type-to-confirm modal or any other arming ceremony. The header
indicator (fleet, dispatcher settings, ingestion, Fabro summary) MUST reflect
the effective dispatcher settings for the selected repo.

The header/status line MUST surface backing-source unavailability for the
current cycle -- how many and which sources degraded to a not-observed
finding rather than an observed snapshot -- so an operator can tell a
cockpit-blind screen (sources unreachable) from an idle factory (nothing
actionable). When every source is observed the header carries no phantom
unavailability count, so a true-empty screen is never dressed as a false
alarm.

The TUI's Status line MUST render context-specific shortcut key hints — the keys that act in the CURRENTLY-focused context — and MUST NOT render a static or empty hint line where actions are available. The hints MUST reflect the currently-focused pane: switching focus to a different pane MUST change the hints to that pane's available actions. The hints MUST also reflect any open modal or overlay: opening a modal or overlay MUST replace the pane's hints with the hints for that modal/overlay, and closing it MUST restore the focused pane's hints. No context in which shortcut actions are available may show an empty hint line. A hint MUST NOT advertise a binding the key does not perform in that context — a hint that names an action the key does not take is worse than no hint, because the operator cannot tell a broken key from a mis-documented one. Concretely: a key whose action differs between two contexts (including between a view's sub-views) MUST be described by the action it actually performs in the current one; and a key that acts only on a selected work-item MUST NOT be listed where no work-item is selected, which includes a lane overview (whose selection is a lane, not an item) and an empty drilled-in lane. Finer-grained per-item suppression is REQUIRED: a per-item verb hint MUST be suppressed, and its key MUST be inert, when the selected work-item's lifecycle state does not admit the verb per the per-state operator verb vocabulary (repo `thewoolleyman/livespec-orchestrator-beads-fabro`, `SPECIFICATION/contracts.md`, its Per-state operator verb vocabulary section), which the console consumes as data and MUST NOT re-derive: approve only at `pending-approval`; accept only at `acceptance`; reject only at the two human-valve lanes (`pending-approval` and `acceptance`); the policy dials only within their upstream windows (set-admission through `pending-approval`; merge-on-review-cap and review-fix-cap through `ready`; set-acceptance and acceptance-rework-cap through `active`; none on `done`). The suppression rule MUST NOT assume `active` has a single entry door: that vocabulary admits journaled dispatch AND the rework returns from `acceptance`, so an `acceptance`-lane item MUST keep its reject hint. A hint that names a verb the vocabulary forbids for the selected item violates this clause's honesty rule. The specific hint strings and key bindings are an implementation detail; the contract is that the hint line is non-empty, honest, and appropriate to the currently-focused pane and any open overlay, and changes as focus or overlay changes.

The TUI MUST offer a driver-handoff verb whose meaning is lane-appropriate per the same per-state vocabulary: on a `backlog` item it MUST render the groom invocation for the selected work-item id; on a `ready` item whose `factory_safety` is non-null — exactly the set the orchestrator's dispatch admission refuses to sandbox and host-routes — it MUST render the driver-implement invocation for the id; in every other state the verb MUST be suppressed. The rendered command MUST be the existing orchestrator operation invocation carrying only the work-item id — no prompt file is written; the tmp-file slot remains reserved and deliberately unbuilt (design record: `plan/archive/operator-surface-redesign/research/l4p3ce-handoff-transport.md`, its transport decisions). The command MUST render in a full-width overlay that preserves copyability, and the console MAY additionally emit it via OSC 52. The overlay MUST NOT claim the copy succeeded — OSC 52 is fire-and-forget and success is unknowable to the console; permitted wording describes what the console did (for example "copy sent to terminal"), and wording asserting an unobservable outcome (for example "Copied!") is forbidden, because a terminal with clipboard disabled would otherwise leave the operator pasting stale content while believing they copied. The console MUST NOT execute, spawn, monitor, or await the driver session; the driver session journals its own dispatch through the orchestrator's driver-dispatch surface, and widening driver-implement beyond the host-only-refused set MUST NOT be done without the claim mechanism that vocabulary names as its precondition. The specific key binding is an implementation detail. Adopter precondition: the rendered invocation resolves only in a driver session whose project has the orchestrator plugin installed; a console adopter without that plugin gets a non-resolving handoff the console cannot detect.

The TUI MUST let the operator read a selected work-item's FULL standardized record without leaving the console. The record surface MUST be reachable from the drilled-in lane list, where an individual work-item is selected, and from the needs-attention view when the selected attention row carries a known work-item id. It MUST render every field of the orchestrator's standardized work-item shape — at minimum the title, the description, the type, the status, the lane, the rank, the origin, the gap id, the assignee, the dependencies, the capture time, the resolution, the reason, the audit trail, the superseding item, and the spec commitment hint — and a field the orchestrator did not emit MUST render as explicitly absent rather than be omitted, so the operator can tell an unset field from an undisplayed one. The description MUST be carried as emitted rather than reformatted, and the surface MUST scroll when the record is taller than the viewport, so no part of a long record is unreachable. The standardized work-item shape is owned by `livespec-orchestrator-beads-fabro` and consumed here verbatim: the console MUST NOT re-derive, re-compute, or reformat a record field, and MUST NOT drop a work-item from the board because a descriptive field it does not recognize is absent or unparseable. The specific key binding, modal geometry, and field ordering are an implementation detail; the contract is that every standardized field of the selected work-item is readable inside the console.

**Per-item verb surface parity.** A needs-attention row that carries a known work-item id resolves the SAME standardized work-item record that a drilled-in lane selection resolves, so the console MUST offer on that row -- the needs-attention row and the drilled-in lane selection being the two per-item surfaces -- every per-item verb the selected item's lifecycle state admits under the per-state operator verb vocabulary -- the per-item factory dispatch, the move-to-status picker, the driver handoff, and the human valves alike -- exactly as it offers them in the drilled-in lane: the same availability predicates, the same confirmation dialogs, and the same persisted command envelopes. The surface the operator is looking at MUST NOT be the reason a state-admitted verb is withheld. The only inputs to a per-item verb's availability are the consumed work-item record (lane, admission and acceptance policy, factory-safety marker, scope-override flag) and the board facts the verb itself names (the ready-work count for the drain); which view hosts the selection is not one of them. A row that is not backed by a known work-item id (for example a source-unavailability row or a repository-health row) offers no per-item verb, and the honesty rule of the Status-line hints clause above applies unchanged. This clause exists because of a measured failure: on 2026-08-31 the item that needed the operator appeared in the inbox, every action on it was presented unavailable there, and the operator had to leave the inbox, re-find the same item in the Lanes view, and drill in before any verb lit up.

The TUI's top/header pane MUST be focusable within the pane focus cycle: the operator MUST be able to move focus onto it as onto any other pane. While the top/header pane holds focus, it MUST support HORIZONTAL scrolling to reveal content clipped at the current viewport width — content cut off on a narrow viewport MUST become reachable by scrolling the pane left and right while it is focused. When focus moves away from the top/header pane (on blur), the pane MUST return to its default left-justified position rather than remaining mid-scroll. The specific key bindings, scroll step, and column counts are an implementation detail; the contract is that the top/header pane joins the focus cycle, scrolls horizontally to reveal clipped content while focused, and snaps back to its left-justified default on blur.

The TUI's pane bodies MUST render operational content only — the live data and state an operator acts on — and MUST NOT carry baked-in explanatory or documentation prose describing what the console is, how a projection is derived, or how a view behaves; any such explanation belongs in the user documentation, not the live panes. What operational content each pane renders is an implementation detail; the contract is that a pane body carries operational content only, with no explanatory or documentation sentences baked into it beyond the operational help surfaces this contract separately requires (the Status-line hints, the modal Help overlay, and the Settings per-row inline help).

The TUI MUST let the operator drive each of the eight Work-item Lifecycle
commands against the selected work-item -- the seven human-valve, policy-edit,
and status-move commands (approve, accept, reject, set-admission,
set-acceptance, resolve-blocked, move) plus the per-item dispatcher-setting
override -- each routed through the shared orchestrator action port rather than
any direct ledger write, and a destructive reject gated behind an explicit
confirmation step before the command is submitted. The override control MUST
NOT be offered for `wip_cap`.

```mermaid
flowchart TB
  subgraph Screen["TUI default screen"]
    Header["Header: fleet, dispatcher settings, ingestion, Fabro summary"]
    Left["Left navigation\nneeds-attention / Spec / Lanes / Events / Repos / Settings"]
    Center["Center list\nlane overview, arrow-selected work cards, or needs-attention items"]
    Right["Right detail pane\nsource refs, timeline, next actions"]
    Footer["Footer\nshortcuts, command status, live-update health"]
  end

  Header --> Left
  Header --> Center
  Header --> Right
  Left --> Center
  Center --> Right
  Right --> Footer
```

```mermaid
flowchart LR
  Projection["Projection snapshot"]
  Selection["Arrow selection"]
  Detail["Detail pane"]
  Modal["Command modal"]
  Command["Persisted command"]
  Live["Live event update"]

  Projection --> Selection --> Detail
  Detail --> Modal --> Command
  Command --> Live --> Projection
```

### Menu-primary operator navigation

Maintainer decision, 2026-08-02, recorded verbatim so the constraint is
not softened by paraphrase: "I would rather every action be available
via MENUS and DIALOGS as the first-class, required, primary navigation
UX mechanism. And hotkeys are only provided IN ADDITION to first-class
menu operation AS A POWER-USER CONVENIENCE."

Every operator action the console offers MUST be reachable through the
menu system: menus and dialogs are the first-class, required, primary
navigation mechanism. Hotkeys MUST be provided only in addition to menu
operation, as a power-user convenience; a hotkey MUST NOT be the sole
route to any action, and removing every hotkey MUST leave every action
reachable.

The console MUST maintain a single ACTION REGISTRY as the sole source
of truth for the operator action set. Each registry entry MUST carry: a
stable action id; a human label; a parameter schema; an availability
predicate; a handler; and a menu path / category taxonomy.

The availability predicate MUST be able to depend on the full item
state the action requires -- including at least the lifecycle lane AND
the effective admission policy -- and MUST be the single derivation
consumed by BOTH the presentation layer (whether the action is offered)
and the invocation layer (whether the action fires). A surface that
offers an action which cannot fire is a contract violation, as is an
action that fires while not offered.

Menus, hotkey bindings, Status-line hints, the in-app Help modal, and
the operator documentation's key/action reference MUST be derived from
the registry, not restated beside it; a second, independently
maintained encoding of the action set is a contract violation. This
generalizes the Status-line hint-honesty clause above rather than
replacing it.

When an invoked action is refused, the console MUST render the refusal
to the operator. Refusal payloads returned on the orchestrator's
`--json` surface are structured and actionable; discarding them at the
presentation boundary is a contract violation.

```mermaid
flowchart TB
  Registry["Action registry (id, label, params, availability, handler, menu path)"]
  Menus["Menus + dialogs (primary)"]
  Keys["Hotkeys (additional only)"]
  Hints["Status-line hints"]
  Help["Help modal"]
  Docs["docs/ key-action reference"]
  Avail{"Availability predicate (lane AND admission policy, ...)"}
  Fire["Invocation layer"]

  Registry --> Menus
  Registry --> Keys
  Registry --> Hints
  Registry --> Help
  Registry --> Docs
  Registry --> Avail
  Avail -->|"offered"| Menus
  Avail -->|"permitted"| Fire
  Fire -->|"refusal payload"| Menus
```
